syntax = "proto3";
option go_package = ".;grpc";

message CreateAccountRequest {
  string name = 1;
  string email = 2;
  uint32 age = 3;
}

message CreateAccountResponse {
  int64 id = 1;
}

service SocialNetwork {
  rpc CreateAccount(CreateAccountRequest) returns(CreateAccountResponse);
}